nav align corrections in mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -271,7 +271,7 @@ footer li a{
 
   nav ul{
     margin: 0;
-    text-align: ;
+    text-align: center;
   }
 
   nav li a{
@@ -283,6 +283,7 @@ footer li a{
 
   .menu ul{
     width: 100%;
+    text-align: center;
   }
   header{
     margin: 0 30px;
